# fem-pde-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
analyses/: more_trial.py  run_2d_fem.py  run_convection_diffusion.py  trial.py
from_scratch/: building_1d_fem.ipynb
from_scratch/.ipynb_checkpoints/: building_1d_fem-checkpoint.ipynb
src/: cli.py  convection_diffusion_1d.py  fem_solver.py
src/BCs/: boundary_conditions.py
src/assembly/: linear_system_assembly_1d.py  triangle_iterator_2d.py
src/mesh/: mesh.py
src/mixins_1d/: basis_functions.py  mesh_refinement.py
src/solvers/: convection_diffusion_1d.py  solvers_2d.py
tests/: test_cli_import.py
